@@ -14,6 +14,15 @@ $(function() {
   });
 });
 </script>
+
+<tal:block define="useaccesskeys here/useAccessKeys" condition="not:request/previewissue|nothing">
+<script type="text/javascript" tal:condition="not:useaccesskeys">
+$(function() {$('#title')[0].focus();});</script>
+<script type="text/javascript" tal:condition="useaccesskeys">
+$(function() {$('#title')[0].focus();disableKS();});</script>
+</tal:block>
+
+
  
 <script
  tal:define="conf here/getWYSIWYGEditor"
@@ -282,11 +291,6 @@ $(function() {
 
 
 </form>
-
-<tal:block define="useaccesskeys here/useAccessKeys" condition="not:request/previewissue|nothing">
-<script type="text/javascript" tal:condition="not:useaccesskeys">$('#title')[0].focus();</script>
-<script type="text/javascript" tal:condition="useaccesskeys">$('#title')[0].focus();disableKS();</script>
-</tal:block>
 
 
 
