@@ -5,7 +5,14 @@
 
 <script type="text/javascript"
  tal:attributes="src string:$ru/quickaddissue.js"></script>
- 
+
+<tal:block define="useaccesskeys here/useAccessKeys" condition="not:request/previewissue|nothing">
+<script type="text/javascript" tal:condition="not:useaccesskeys">
+$(function() {$('#title')[0].focus();});</script>
+<script type="text/javascript" tal:condition="useaccesskeys">
+$(function() {$('#title')[0].focus();disableKS();});</script>
+</tal:block>
+
 <script 
  tal:define="conf here/getWYSIWYGEditor"
  tal:condition="python:here.getSavedTextFormat()=='html' and conf"
@@ -167,10 +174,6 @@ here's a special script that converts 'section' into ['section'] if present and 
 
 </form>
 
-<tal:block define="useaccesskeys here/useAccessKeys">
-<script type="text/javascript" tal:condition="not:useaccesskeys">$.id('title').focus();</script>
-<script type="text/javascript" tal:condition="useaccesskeys">$.id('title').focus();disableKS();</script>
-</tal:block>
 
 </div>
 </html>
